@@ -1,12 +1,12 @@
 ;;; eicq-log.el --- Logging code for Eicq.
 
-;; Copyright (C) 2002,03 Steve Youngs
+;; Copyright (C) 2002,03,04 Steve Youngs
 
 ;; RCS: $Id$
-;; Author:        Steve Youngs <sryoungs@bigpond.net.au>
-;; Maintainer:    Steve Youngs <sryoungs@bigpond.net.au>
+;; Author:        Steve Youngs <steve@youngs.au.com>
+;; Maintainer:    Steve Youngs <steve@youngs.au.com>
 ;; Created:       2002-10-01
-;; Last-Modified: <2003-10-13 22:52:13 (steve)>
+;; Last-Modified: <2004-05-30 11:13:42 (steve)>
 ;; Homepage:      http://eicq.sf.net/
 ;; Keywords:      comm ICQ
 
