@@ -1,12 +1,12 @@
 ;; eicq-setup.el --- Setup user directory and files for Eicq.
 
-;; Copyright (C) 2002,03 Steve Youngs
+;; Copyright (C) 2002,03,04 Steve Youngs
 
 ;; RCS: $Id$
-;; Author:        Steve Youngs <sryoungs@bigpond.net.au>
-;; Maintainer:    Steve Youngs <sryoungs@bigpond.net.au>
+;; Author:        Steve Youngs <steve@youngs.au.com>
+;; Maintainer:    Steve Youngs <steve@youngs.au.com>
 ;; Created:       2002-10-03
-;; Last-Modified: <2003-10-02 15:36:26 (steve)>
+;; Last-Modified: <2004-05-30 11:15:00 (steve)>
 ;; Homepage:      http://eicq.sf.net/
 ;; Keywords:      comm ICQ
 
