@@ -1,3 +1,7 @@
+2004-05-30  Steve Youngs  <steve@youngs.au.com>
+
+	* *: Update copyright notices and my email address.
+
 2003-10-17  Steve Youngs  <sryoungs@bigpond.net.au>
 
 	* eicq-v8proto.el (eicq::CLI_IDENT): Comment out entries that were
